--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "npm start",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://your-username.github.io/your-repo-name",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -33,6 +37,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -66,8 +71,7 @@
     "parcel": "^2.13.3",
     "postcss": "^8.4.49",
     "process": "^0.11.10",
-    "tailwindcss": "^3.4.17",
-    "tailwindscss": "^0.3.0"
+    "tailwindcss": "^3.4.17"
   },
   "browserslist": {
     "production": [
