--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npm start",
+    "dev": "npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -18,13 +18,14 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-refresh": "^0.11.0"
+    "react-refresh": "^0.11.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.3.0",
-    "parcel": "^2.13.3",
     "postcss": "^8.4.49",
+    "postcss-preset-env": "^7.0.1",
     "tailwindcss": "^3.4.17"
   },
   "browserslist": {
@@ -43,3 +44,4 @@
     "extends": "react-app"
   }
 }
+
